@@ -83,6 +83,9 @@ Optimizations
 2. SOLR-974:  DataImportHandler skips commit if no data has been updated.
               (Wojtek Piaseczny, shalin)
 
+3. SOLR-1004: Check for abort more frequently during delta-imports.
+              (Marc Sturlese, shalin)
+
 Bug Fixes
 ----------------------
 1. SOLR-800:  Deep copy collections to avoid ConcurrentModificationException in XPathEntityprocessor while streaming
